# dynamodb-workshop

.github/: CODEOWNERS
dynamodb_demo/: .flake8  .gitignore  Makefile  pyproject.toml
dynamodb_demo/dynamodb_demo/: ddb_helpers.py  example_1.py  example_2.py  example_3.py  models.py
dynamodb_demo/scripts/: check.bash  integration-tests.bash  tests.bash
dynamodb_demo/tests/: conftest.py  test_example1.py  test_example2.py  test_example3.py
