[tool.poetry]
name = "dynamodb-demo"
version = "0.1.0"
description = ""
authors = ["Peter Strecansky <pstrecansky@powerfulmedical.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "1.29.3"
backoff = "^2.2.1"
pydantic = "1.10.11"


[tool.poetry.group.dev.dependencies]
black = "23.11.0"
flake8 = "6.1.0"
isort = "5.12.0"
mypy = "1.7.0"
pytest = "7.4.3"
pytest-cov = "4.1.0"
bandit = "1.7.5"
moto = {extras = ["server"], version = "^4.2.10"}
boto3-stubs = {extras = ["essential"], version = "^1.33.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.poetry_requirements.dependencies]
pip-tools = "7.3.0"


[tool.poetry.group.deployment.dependencies]
gunicorn = "20.1.0"
psycopg = {extras=["c"], version = "3.1.13"}

[tool.bandit]
recursive = true
number = 5
exclude_dirs = ["tests"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests"]
plugins = [
    "pydantic.mypy",
]
